[gd_scene load_steps=4 format=3 uid="uid://3pwo7kkfdave"]

[ext_resource type="Theme" uid="uid://cniktbk5ckwmp" path="res://style/WarmLight.theme" id="1_rhcoy"]
[ext_resource type="Script" uid="uid://8d7nnvrmlkou" path="res://Tools/DiceRoller/scripts/diceroller.gd" id="2_t8ntp"]
[ext_resource type="FontFile" uid="uid://cv7k8nak1nu7g" path="res://style/font/Urbanist-Black.ttf" id="3_jdpq7"]

[node name="Window2" type="Window"]
auto_translate_mode = 1
handle_input_locally = false
gui_embed_subwindows = true
title = "Dice Roller"
initial_position = 1
size = Vector2i(400, 200)
min_size = Vector2i(400, 200)
theme = ExtResource("1_rhcoy")

[node name="Diceroller" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rhcoy")
script = ExtResource("2_t8ntp")

[node name="VBoxContainer" type="VBoxContainer" parent="Diceroller"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 60.0
offset_right = -60.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ResultLabel" type="Label" parent="Diceroller/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_jdpq7")
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1
vertical_alignment = 1

[node name="OperandsLabel" type="Label" parent="Diceroller/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineRecord" type="Label" parent="Diceroller/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.2371, 0.198, 0.498039)
horizontal_alignment = 1
vertical_alignment = 1

[node name="InputLine" type="LineEdit" parent="Diceroller/VBoxContainer"]
layout_mode = 2
alignment = 1

[connection signal="text_submitted" from="Diceroller/VBoxContainer/InputLine" to="Diceroller" method="_on_input_line_text_submitted"]
